[gd_scene load_steps=6 format=3 uid="uid://qlumda3tcp14"]

[ext_resource type="PackedScene" uid="uid://cjtrpsgul3n1g" path="res://scenes/primary_menu_button.tscn" id="1_gu06c"]
[ext_resource type="Script" path="res://scripts/fail_menu.gd" id="1_jo1ej"]

[sub_resource type="Animation" id="Animation_dbn8h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_fmo03"]
resource_name = "reveal"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u2i6w"]
_data = {
"RESET": SubResource("Animation_dbn8h"),
"reveal": SubResource("Animation_fmo03")
}

[node name="FailMenu" type="CanvasLayer"]
script = ExtResource("1_jo1ej")

[node name="Menu" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_right = 1164.0
offset_bottom = 659.0

[node name="InnerRectangle" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.5
offset_top = -261.0
offset_right = 435.5
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.65098, 1)

[node name="Border" type="ColorRect" parent="Menu/InnerRectangle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.5
offset_top = -222.0
offset_right = 374.5
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 0.65098, 1)

[node name="Title" type="Label" parent="Menu/InnerRectangle/Border"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_right = 150.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "You Failed!"
horizontal_alignment = 1

[node name="FailureText" type="Label" parent="Menu/InnerRectangle/Border"]
layout_mode = 0
offset_left = 119.5
offset_top = 217.5
offset_right = 623.5
offset_bottom = 308.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Oh No! You were overrun by snowmen!"

[node name="TopRightButtons" type="VBoxContainer" parent="Menu/InnerRectangle/Border"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.0
offset_top = 50.0
offset_bottom = 180.0
grow_horizontal = 0
theme_override_constants/separation = 20

[node name="SettingsButton" parent="Menu/InnerRectangle/Border/TopRightButtons" instance=ExtResource("1_gu06c")]
layout_mode = 2
focus_next = NodePath("../../FooterButtons/ChooseLevelButton")
focus_previous = NodePath("../HelpButton")
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="HelpButton" parent="Menu/InnerRectangle/Border/TopRightButtons" instance=ExtResource("1_gu06c")]
layout_mode = 2
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../../FooterButtons/RestartButton")
theme_override_font_sizes/font_size = 20
text = "Help"

[node name="FooterButtons" type="HBoxContainer" parent="Menu/InnerRectangle/Border"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 150

[node name="ChooseLevelButton" parent="Menu/InnerRectangle/Border/FooterButtons" instance=ExtResource("1_gu06c")]
layout_mode = 2
focus_next = NodePath("../RestartButton")
focus_previous = NodePath("../../TopRightButtons/SettingsButton")
text = "Choose Level"

[node name="RestartButton" parent="Menu/InnerRectangle/Border/FooterButtons" instance=ExtResource("1_gu06c")]
layout_mode = 2
focus_next = NodePath("../../TopRightButtons/HelpButton")
focus_previous = NodePath("../ChooseLevelButton")
text = "Restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
libraries = {
"": SubResource("AnimationLibrary_u2i6w")
}

[connection signal="pressed" from="Menu/InnerRectangle/Border/TopRightButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Menu/InnerRectangle/Border/TopRightButtons/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="Menu/InnerRectangle/Border/FooterButtons/ChooseLevelButton" to="." method="_on_choose_level_button_pressed"]
[connection signal="pressed" from="Menu/InnerRectangle/Border/FooterButtons/RestartButton" to="." method="_on_restart_button_pressed"]
